--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@shopify/shopify-api": "^11.14.1",
     "@shopify/storefront-api-client": "^1.0.9",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
